recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:11: error: ';' expected but ')' found.
	)
        ^